fix: corrected alignment on scrolling table head

--- a/src/css/table-head.css
+++ b/src/css/table-head.css
@@ -1,5 +1,7 @@
 .scrolling-head {
+    height: 70px;
     width: 70%;
+    overflow: hidden;
     padding: 10px 20px 10px 20px;
     background-color: hsl(0, 0%, 98%);
     border-radius: 10px;
@@ -17,5 +19,11 @@
 @media (max-width: 992px) {
     .scrolling-head{
         width: 84vw;
+    }
+}
+
+@media (min-width: 1850px) {
+    .scrolling-head {
+        width: 67vw;
     }
 }
